2006-06-27  Akim Demaille  <akim@epita.fr>

	Fix the clean invocations to hevea.
	Note that this breaks document using images (to be fixed).
	* util/latex2html.test (run_hevea_check): Extend to support
	various build modes.
	Test them.
	Force the creation of aux files (something the previous test
	failed to do...).
	* util/defs.in (title): New.
	* util/texi2dvi: Fix incorrect "error" invocations.
	(run_hevea): Don't pass -o to hevea.
	Move the result to the expected destination.
	Don't pass -noiso.

2006-06-26  Akim Demaille  <akim@epita.fr>

	* util/texi2dvi (generated_files_get): Call uniq.

2006-06-07  <Ralf.Wildenhues@gmx.de>

	* Makefile.am (AUTOMAKE_OPTIONS): Require Automake 1.9, since
	non-direct subdirs in SUBDIRS (gnulib/lib) is a 1.9 feature.

2006-06-24  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (anchor): pxref Node Line Requirements since the
	same name restrictions apply.  Suggested by Eli.

2006-06-21  Akim Demaille  <akim@epita.fr>

	* util/texi2dvi (fatal): Rename as...
	(error): this.
	If the exit status is 0, don't exit.
	(run): New.
	Use it where appropriate.
	(run_dvipdf): New.
	Use it.

2006-06-21  Akim Demaille  <akim@epita.fr>

	* util/Makefile.am, info/Makefile.am, makeinfo/Makefile.am,
	* lib/Makefile.am (DEFS): Remove, included in...
	(AM_CPPFLAGS): this.
	Add -I $(top_srcdir) to find system.h.

2006-06-19  Karl Berry  <karl@gnu.org>

	* system.h: move to top level.
	* */Makefile.am (AM_CPPFLAGS): no longer need -I$(top_srcdir)/lib.

	* makeinfo/makeinfo.c (getdocumenttext): replace with a modified
	version of get_title from gettext, as suggested by Bruno Haible,
	back on 2 Dec 2003.
	* gnulib: import xsetenv module.

	* doc/texinfo.tex (\indexdotfill): back to regular (non-italic)
	periods, suggested by Werner Lemberg and others.

2006-06-19  Akim Demaille  <akim@epita.fr>

	Support dvips and dvipdf for sake of pstricks, and to
	spare the use tweaking TEXINPUTS.
	* util/defs.in (optionset_get, assert_and_remove_files): New.