@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.36.
-.TH TEXI2DVI "1" "June 2006" "texi2dvi 1.86" "User Commands"
+.TH TEXI2DVI "1" "June 2006" "texi2dvi 1.88" "User Commands"
 .SH NAME
 texi2dvi \- convert Texinfo documents to DVI
 .SH SYNOPSIS
